# simple-expression-evaluator

./: .gitignore  CMakeLists.txt  README.md
src/: ExpressionEvaluator.cpp  VariableTable.cpp  main.cpp
src/include/: ExpressionEvaluator.h  VariableTable.h
